--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="headerBtn">
                 <a href="log.html">LOGIN</a>
-                <button id="logout-button" style="width: 70px; height: 30px; color: red; font-weight: 900; background-color: #fff;">로그아웃</button>
+                <button id="logout-button" style="width: 70px; height: 30px; color: red; font-weight: 900;">로그아웃</button>
             </div>
         </div>
     </header>
@@ -29,7 +29,7 @@
         <div class="items">
             <div class="itemBox1">
                 <div class="box1">
-                    <label for="modal1" class="open">진행 현황도</label>
+                    <!-- <label for="modal1" class="open">진행 현황도</label> -->
                 </div>
                 <input type="checkbox" id="modal1">
                 <div class="modalb">
@@ -39,7 +39,7 @@
                             <h2>진행도</h2>
                         </div>
                         <div class="now-main">
-                            <h1>80%</h1>
+                            <h1 id="progress-percentage">80%</h1>
                         </div>
                     </div>
                 </div>
@@ -98,11 +98,11 @@
                             <h2>오늘의 도전</h2>
                         </div>
                         <div class="test-items">
-                            <p><a href="sub01.html">5개</a></p>
-                            <p><a href="sub02.html">10개</a></p>
-                            <p><a href="sub03.html">20개</a></p>
-                            <p><a href="sub04.html">50개</a></p>
-                            <p><a href="sub05.html">100개</a></p>
+                            <p><a href="sub01.html" id="test-link-1">5개</a></p>
+                            <p><a href="sub02.html" id="test-link-2">10개</a></p>
+                            <p><a href="sub03.html" id="test-link-3">20개</a></p>
+                            <p><a href="sub04.html" id="test-link-4">50개</a></p>
+                            <p><a href="sub05.html" id="test-link-5">100개</a></p>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                                 <p>2024/06/03/ 고진감래(苦盡甘來) 괴로움이 다하면 달콤함이 온다는 뜻으로 고생 끝에 낙이 온다는 말</p>
                                 <p>2024/06/03/ 구사일생(九死一生) 아홉 번 죽을 뻔하다 한 번 살아난다는 뜻으로 죽을 고비를 여러 번 넘기고 간신히 목숨을 건진다는 말</p>
                                 <p>2024/06/22/ 다다익선(多多益善) 많으면 많을수록 더욱 좋다는 말</p>
-                                <p>2024/07/2/ 금의야행(錦衣夜行) 비단옷을 입고 밤에 감. 아무 보람이 없는 행동</p>
+                                <p>2024/07/02/ 금의야행(錦衣夜行) 비단옷을 입고 밤에 감. 아무 보람이 없는 행동</p>
                             </div>
                         </div>
                     </div>
