Feat: update-kakao

--- a/kakao/index.html
+++ b/kakao/index.html
@@ -36,6 +36,13 @@
                 <img src="images/dkjal.png" alt="">
             </div>
         </div>
+        <div class="con1">
+            <div class="box1">
+                <h1>Connect. <br>
+                Solve. <br>
+                Create </h1>
+            </div>
+        </div>
     </div>
 </body>
 </html>
