Feat: update-nuribom

--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -21,7 +21,7 @@
             </div>
             <div class="headerBtn">
                 <a href="log.html">LOGIN</a>
-                <!-- <button id="logout-button" style="width: 70px; height: 30px; color: red; font-weight: 900;">로그아웃</button> -->
+                <button id="logout-button" style="width: 70px; height: 30px; color: red; font-weight: 900;">로그아웃</button>
             </div>
         </div>
     </header>
