Feat: update-nuribom

--- a/nuribom/sub01.html
+++ b/nuribom/sub01.html
@@ -195,7 +195,7 @@
         document.getElementById('close-modal-button').addEventListener('click', function() {
             const modal = document.getElementById('congrats-modal');
             modal.style.display = 'none';
-            window.location.href = 'index.html';
+            window.location.href = 'log2.html';
         });
 
         // 첫 번째 문제 로드
