--- a/nuribom/sub02.html
+++ b/nuribom/sub02.html
@@ -73,6 +73,7 @@
     <div id="congrats-modal" class="modal">
         <div class="modal-content">
             <h2>참 잘했어요!</h2>
+            <h1>10/10</h1>
             <button id="close-modal-button">닫기</button>
         </div>
     </div>
@@ -244,7 +245,7 @@
         document.getElementById('close-modal-button').addEventListener('click', function() {
             const modal = document.getElementById('congrats-modal');
             modal.style.display = 'none';
-            window.location.href = 'index.html';
+            window.location.href = 'log2.html';
         });
 
         // 첫 번째 문제 로드
