--- a/nuribom/sub04.html
+++ b/nuribom/sub04.html
@@ -79,6 +79,7 @@
     <div id="congrats-modal" class="modal">
         <div class="modal-content">
             <h2>참 잘했어요!</h2>
+            <h1>100/100</h1>
             <button id="close-modal-button">닫기</button>
         </div>
     </div>
@@ -641,7 +642,7 @@
 
         const closeModalButton = document.getElementById('close-modal-button');
         closeModalButton.addEventListener('click', () => {
-            window.location.href = 'index.html'; // Redirect to index.html
+            window.location.href = 'log2.html'; // Redirect to index.html
         });
 
         document.getElementById('unknown-btn').addEventListener('click', () => {
