--- a/nuribom/sub05.html
+++ b/nuribom/sub05.html
@@ -1141,7 +1141,7 @@
 
         const closeModalButton = document.getElementById('close-modal-button');
         closeModalButton.addEventListener('click', () => {
-            window.location.href = 'index.html'; // Redirect to index.html
+            window.location.href = 'log2.html'; // Redirect to index.html
         });
 
         document.getElementById('unknown-btn').addEventListener('click', () => {
