--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>누리봄 프로젝트</title>
+    <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -20,7 +21,7 @@
                 </svg>
             </div>
             <div class="headerBtn">
-                <a href="log.html">LOGIN</a>
+                <a href="log.html">LOGIN <i>/</i> REGISTER</a>
             </div>
         </div>
     </header>
@@ -157,6 +158,5 @@
             <button class="close1">닫기</button>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
