Feat: commit-test

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -21,7 +21,7 @@
                 </svg>
             </div>
             <div class="headerBtn">
-                <a href="log.html">LOGIN <i>/</i> REGISTER</a>
+                <a href="log.html">LOGIN <i></i></a>
             </div>
         </div>
     </header>
