--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -14,14 +14,8 @@
             <div class="logo">
                 <h1><a href="index.html">Wisdom Tech</a></h1>
             </div>
-            <div class="inBox">
-                <input type="text" placeholder="Search">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                </svg>
-            </div>
             <div class="headerBtn">
-                <a href="log.html">LOGIN <i></i></a>
+                <a href="log.html">LOGIN/LOGIS <i></i></a>
             </div>
         </div>
     </header>
@@ -122,13 +116,6 @@
                 <button>&lt;</button>
                 <li id="idiom-text">구사일생</li>
                 <button>&gt;</button>
-            </div>
-            <div class="icon">
-                <svg id="audio-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-caret-right-square" viewBox="0 0 16 16">
-                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-                    <path d="M5.795 12.456A.5.5 0 0 1 5.5 12V4a.5.5 0 0 1 .832-.374l4.5 4a.5.5 0 0 1 0 .748l-4.5 4a.5.5 0 0 1-.537.082"/>
-                </svg>
-                <audio id="audio" src="path/to/your/audiofile.mp3"></audio>
             </div>
         </div>
     </div>
