--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -15,7 +15,7 @@
                 <h1><a href="index.html">Wisdom Tech</a></h1>
             </div>
             <div class="headerBtn">
-                <a href="log.html">LOGIN/LOGIS <i></i></a>
+                <a href="log.html">LOGIN/SIGNIN <i></i></a>
             </div>
         </div>
     </header>
