--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>누리봄 프로젝트</title>
+    <link rel="stylesheet" href="log2.css">
+    <title>2페이지</title>
+    <script src="script2.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <div class="head">
             <div class="logo">
-                <h1><a href="index.html">Wisdom Tech</a></h1>
+                <h1><a href="log2.html">Wisdom Tech</a></h1>
             </div>
             <div class="headerBtn">
-                <button id="logout-button" style="width: 70px; height: 30px; color: red; font-weight: 900;">로그아웃</button>
+                <a href="index.html">로그아웃 <i></i></a>
             </div>
         </div>
     </header>
-    <nav> 
+    <nav>
         <div class="items">
             <div class="itemBox1">
                 <div class="box1">
-                    
+                    <!-- <label for="modal1" class="open">진행 현황도</label> -->
                 </div>
+
                 <div class="box2">
                     <a href="#"></a>
                 </div>
@@ -143,6 +145,5 @@
             <button class="close1">닫기</button>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
