--- a/nuribom/sub03.html
+++ b/nuribom/sub03.html
@@ -73,216 +73,28 @@
     <div id="congrats-modal" class="modal">
         <div class="modal-content">
             <h2>참 잘했어요!</h2>
-            <h1>50/50</h1>
+            <h1 id="score-display">0/0</h1>
             <button id="close-modal-button">닫기</button>
         </div>
     </div>
 
     <script>
         const questions = [
-            {
-                text: '구사일생',
-                desc: '아홉 번 죽을 뻔하다 한 번 살아난다는 뜻으로 죽을 고비를 여러 번 넘기고 간신히 목숨을 건진다는 말',
-                options: [
-                    { text: '九死一生', correct: true },
-                    { text: '苦盡甘來', correct: false },
-                    { text: '刮目相對', correct: false },
-                    { text: '近墨者黑', correct: false }
-                ]
-            },
-            {
-                text: '고진감래',
-                desc: '괴로움이 다하면 달콤함이 온다는 뜻으로 고생 끝에 낙이 온다는 말',
-                options: [
-                    { text: '九死一生', correct: false },
-                    { text: '苦盡甘來', correct: true },
-                    { text: '刮目相對', correct: false },
-                    { text: '近墨者黑', correct: false }
-                ]
-            },
-            {
-                text: '사면초가',
-                desc: '사방이 모두 적에게 포위되어 있다, 도움이 없는 곤란한 지경에 빠짐',
-                options: [
-                    { text: '四面楚歌', correct: true },
-                    { text: '天高馬肥', correct: false },
-                    { text: '指鹿爲馬', correct: false },
-                    { text: '名不虛傳', correct: false }
-                ]
-            },
-            {
-                text: '역지사지',
-                desc: '다른 사람의 입장에서 생각하라',
-                options: [
-                    { text: '自强不息', correct: false },
-                    { text: '和光同塵', correct: false },
-                    { text: '易地思之', correct: true },
-                    { text: '風樹之嘆', correct: false }
-                ]
-            },
-            {
-                text: '일석이조',
-                desc: '하나를 해서 두 가지 좋은 결과를 얻음',
-                options: [
-                    { text: '一石二鳥', correct: true },
-                    { text: '千篇一律', correct: false },
-                    { text: '掩耳盜鈴', correct: false },
-                    { text: '烏飛梨落', correct: false }
-                ]
-            },
-            {
-                text: '청출어람',
-                desc: '제자나 후배가 스승이나 선배보다 나아짐',
-                options: [
-                    { text: '靑出於藍', correct: true },
-                    { text: '明若觀火', correct: false },
-                    { text: '磨斧作針', correct: false },
-                    { text: '大器晩成', correct: false }
-                ]
-            },
-            {
-                text: '동문서답',
-                desc: '동쪽을 묻는데 서쪽을 답함, 질문에 맞지 않는 엉뚱한 대답',
-                options: [
-                    { text: '東問西答', correct: true },
-                    { text: '大器晩成', correct: false },
-                    { text: '畫龍點睛', correct: false },
-                    { text: '走馬看山', correct: false }
-                ]
-            },
-            {
-                text: '일편단심',
-                desc: '한 조각 붉은 마음, 한결같은 충성이나 변치 않는 마음',
-                options: [
-                    { text: '一片丹心', correct: true },
-                    { text: '一瀉千里', correct: false },
-                    { text: '一擧兩得', correct: false },
-                    { text: '一望無際', correct: false }
-                ]
-            },
-            {
-                text: '천고마비',
-                desc: '하늘은 높고 말은 살찐다, 가을을 뜻함',
-                options: [
-                    { text: '千慮一得', correct: false },
-                    { text: '千篇一律', correct: false },
-                    { text: '千里眼', correct: false },
-                    { text: '天高馬肥', correct: true }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            },
-            {
-                text: '풍수지탄',
-                desc: '바람과 나무의 탄식, 부모를 잃은 슬픔',
-                options: [
-                    { text: '風樹之嘆', correct: true },
-                    { text: '風前燈火', correct: false },
-                    { text: '風飛霜降', correct: false },
-                    { text: '風餐露宿', correct: false }
-                ]
-            }
+            { text: '구사일생', desc: '아홉 번 죽을 뻔하다 한 번 살아난다는 뜻으로 죽을 고비를 여러 번 넘기고 간신히 목숨을 건진다는 말', options: [ { text: '九死一生', correct: true }, { text: '苦盡甘來', correct: false }, { text: '刮目相對', correct: false }, { text: '近墨者黑', correct: false } ] },
+            { text: '고진감래', desc: '괴로움이 다하면 달콤함이 온다는 뜻으로 고생 끝에 낙이 온다는 말', options: [ { text: '九死一生', correct: false }, { text: '苦盡甘來', correct: true }, { text: '刮目相對', correct: false }, { text: '近墨者黑', correct: false } ] },
+            { text: '사면초가', desc: '사방이 모두 적에게 포위되어 있다, 도움이 없는 곤란한 지경에 빠짐', options: [ { text: '四面楚歌', correct: true }, { text: '天高馬肥', correct: false }, { text: '指鹿爲馬', correct: false }, { text: '名不虛傳', correct: false } ] },
+            { text: '역지사지', desc: '다른 사람의 입장에서 생각하라', options: [ { text: '自强不息', correct: false }, { text: '和光同塵', correct: false }, { text: '易地思之', correct: true }, { text: '風樹之嘆', correct: false } ] },
+            { text: '일석이조', desc: '하나를 해서 두 가지 좋은 결과를 얻음', options: [ { text: '一石二鳥', correct: true }, { text: '千篇一律', correct: false }, { text: '掩耳盜鈴', correct: false }, { text: '烏飛梨落', correct: false } ] },
+            { text: '청출어람', desc: '제자나 후배가 스승이나 선배보다 나아짐', options: [ { text: '靑出於藍', correct: true }, { text: '明若觀火', correct: false }, { text: '磨斧作針', correct: false }, { text: '大器晩成', correct: false } ] },
+            { text: '동문서답', desc: '동쪽을 묻는데 서쪽을 답함, 질문에 맞지 않는 엉뚱한 대답', options: [ { text: '東問西答', correct: true }, { text: '大器晩成', correct: false }, { text: '畫龍點睛', correct: false }, { text: '走馬看山', correct: false } ] },
+            { text: '일편단심', desc: '한 조각 붉은 마음, 한결같은 충성이나 변치 않는 마음', options: [ { text: '一片丹心', correct: true }, { text: '一瀉千里', correct: false }, { text: '一擧兩得', correct: false }, { text: '一望無際', correct: false } ] },
+            { text: '천고마비', desc: '하늘은 높고 말은 살찐다, 가을을 뜻함', options: [ { text: '千慮一得', correct: false }, { text: '千篇一律', correct: false }, { text: '千里眼', correct: false }, { text: '天高馬肥', correct: true } ] },
+            { text: '풍수지탄', desc: '바람과 나무의 탄식, 부모를 잃은 슬픔', options: [ { text: '風樹之嘆', correct: true }, { text: '風前燈火', correct: false }, { text: '風飛霜降', correct: false }, { text: '風餐露宿', correct: false } ] },
+            // 여기에 추가적인 질문들...
         ];
 
         let currentQuestionIndex = 0;
+        let score = 0; // 사용자의 점수를 추적하는 변수
 
         function loadQuestion(index) {
             const container = document.getElementById('questions-container');
@@ -309,6 +121,7 @@
                     if (option.correct) {
                         button.classList.add('correct');
                         button.classList.remove('incorrect');
+                        score++; // 정답일 때 점수 증가
                         setTimeout(() => {
                             nextQuestion();
                         }, 1000); // 1초 후 다음 문제로 이동
@@ -335,6 +148,8 @@
 
         function showModal() {
             const modal = document.getElementById('congrats-modal');
+            const scoreDisplay = document.getElementById('score-display');
+            scoreDisplay.innerText = `${score}/${questions.length}`; // 점수 표시
             modal.style.display = 'block';
         }
 
