--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="log2.css">
-    <title>2페이지</title>
+    <title>누리봄 프로젝트</title>
     <script src="script2.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -12,7 +12,7 @@
     <header>
         <div class="head">
             <div class="logo">
-                <h1><a href="log2.html">Wisdom Tech</a></h1>
+                <h1><a href="index.html">Wisdom Tech</a></h1>
             </div>
             <div class="headerBtn">
                 <a href="index.html">로그아웃 <i></i></a>
@@ -134,15 +134,6 @@
                 <p>10. 비육지탄(髀肉之歎) 재능을 발휘랄 때를 얻지 못하여 헛되이 세월만 보내는 것을 한탄함을 이르는 말</p>
                 <p>11. 서리지탄(黍離之歎) 나라가 멸망하여 옛 궁궐터에는 기장만이 무성한 것을 탄식한다는 뜻으로, 세상의 영고성쇠가 무상함을 탄식하며 이르는 말</p>
             </div>
-        </div>
-    </div>
-    <div class="logb">
-        <div class="logbox">
-            <h2>로그인</h2>
-            <input type="text" placeholder="아이디">
-            <input type="password" placeholder="비밀번호">
-            <button class="push">로그인</button>
-            <button class="close1">닫기</button>
         </div>
     </div>
 </body>
