Feat: nuribom-project

--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -15,7 +15,10 @@
                 <h1><a href="index.html">Wisdom Tech</a></h1>
             </div>
             <div class="headerBtn">
-                <a href="index.html">로그아웃 <i></i></a>
+                <a href="#" id="login-button">로그아웃 <i></i></a>
+            </div>
+            <div id="logout-button" style="display:none;">
+                <a href="#">로그아웃</a>
             </div>
         </div>
     </header>
@@ -134,6 +137,17 @@
                 <p>10. 비육지탄(髀肉之歎) 재능을 발휘랄 때를 얻지 못하여 헛되이 세월만 보내는 것을 한탄함을 이르는 말</p>
                 <p>11. 서리지탄(黍離之歎) 나라가 멸망하여 옛 궁궐터에는 기장만이 무성한 것을 탄식한다는 뜻으로, 세상의 영고성쇠가 무상함을 탄식하며 이르는 말</p>
             </div>
+        </div>
+    </div>
+    <!-- 로그인 모달 -->
+    <div class="logb" style="display:none;">
+        <div class="modal-content">
+            <span class="close1">&times;</span>
+            <form>
+                <input type="text" placeholder="ID">
+                <input type="password" placeholder="Password">
+                <button class="push" type="button">로그인</button>
+            </form>
         </div>
     </div>
 </body>
