--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -15,7 +15,7 @@
                 <h1><a href="index.html">Wisdom Tech</a></h1>
             </div>
             <div class="headerBtn">
-                <a href="http://127.0.0.1:5502/nuribom/log.html">LOGIN/SIGN</a>
+                <a href="log.html">LOGIN/SIGN</a>
             </div>
         </div>
     </header>
