Feat: nuribom-project-End

--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -12,14 +12,12 @@
     <header>
         <div class="head">
             <div class="logo">
-                <h1><a href="index.html">Wisdom Tech</a></h1>
+                <h1><a href="log2.html">Wisdom Tech</a></h1>
             </div>
             <div class="headerBtn">
-                <a href="#" id="login-button">로그아웃 <i></i></a>
+                <a href="index.html" id="login-button">로그아웃 <i></i></a>
             </div>
-            <div id="logout-button" style="display:none;">
-                <a href="#">로그아웃</a>
-            </div>
+
         </div>
     </header>
     <nav>
