--- a/nuribom/sub04.html
+++ b/nuribom/sub04.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Noto Sans KR', sans-serif; /* 세련된 한글 폰트 적용 */
-            background: linear-gradient(to right, #43cea2, #185a9d); /* 배경에 그라데이션 추가 */
+            background: linear-gradient(to right, #343a40, #ade8f4); /* 배경에 그라데이션 추가 */
             margin: 0;
             padding: 0;
             display: flex;
