Feat: Performance assessment

--- a/Performance assessment/index.html
+++ b/Performance assessment/index.html
@@ -33,6 +33,79 @@
             </div>
         </div>
     </main>
-    
+    <div class="container">
+        <div class="se-img">
+            <img src="images/전주 한옥마을.jpg" alt="">
+        </div>
+        <div class="sub-title">
+            <div class="se-sub">
+                <h1>한옥마을</h1>
+            </div>
+        </div>
+        <div class="se-text">
+
+            <p>전주 한옥마을은 전통과 현대가 조화롭게 어우러진 곳으로 <br>
+                고즈넉한 한옥 건축물과 한국의 문화유산을 가까이에서 체험할 수 있습니다. <br>
+                한복을 입고 골목길을 거닐며 옛 정취를 느끼고, 전통 음식과 다양한 체험 프로그램도 즐겨보세요.
+                전주 한옥마을에서 한국의 진정한 멋과 맛을 만끽하며 특별한 추억을 만들어보세요.</p>
+        </div>
+    </div>
+
+    <div class="con1">
+        <div class="c1-text">
+            <p>전주수목원은 자연의 아름다움과 다양한 식물들이 어우러진 힐링 공간입니다. <br>
+                사계절 내내 변화하는 풍경 속에서 마음의 평안을 찾을 수 있으며,
+                아이들과 함께하는 가족 나들이, 연인과의 산책, 또는 혼자만의 여유를 즐기기에 최적의 장소입니다.
+                전주 한국도로공사에서 운영하는 이 수목원에서 자연과 함께하는 특별한 하루를 보내보세요.</p>
+        </div>
+        <div class="sub-title2">
+            <div class="se-sub">
+                <h1>전주 수목원</h1>
+            </div>
+        </div>
+        <div class="c1-img">
+            <img src="images/수목원.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="con2">
+        <div class="c2-img">
+            <img src="images/경기전.jpg" alt="">
+        </div>
+        <div class="sub-title3">
+            <div class="se-sub">
+                <h1>경기전</h1>
+            </div>
+        </div>
+        <div class="c2-text">
+            <p>전주 경기전은 조선 왕조의 뿌리를 간직한 역사적 유산으로,
+                태조 이성계의 어진(초상화)을 모시고 있는 신성한 장소입니다.
+                고즈넉한 전통 건축물과 정갈한 정원 속에서 조선 왕조의 숨결을 느껴보세요.
+                경기전에서 전주의 역사와 함께하는 특별한 시간을 경험해보세요.</p>
+        </div>
+    </div>
+
+    <div class="con3">
+        <div class="c3-text">
+            <p>전주 자만벽화마을은 골목길마다 펼쳐진 다양한 벽화들로 가득한 예술 마을입니다. <br>
+                아기자기한 그림과 색감이 어우러진 이곳에서, 감성 가득한 산책을 즐기며 추억을 남겨보세요.
+                예술과 전통이 조화로운 자만벽화마을에서 특별한 순간을 만나보세요.
+                전주의 숨겨진 보석 같은 명소, 자만벽화마을에서 잊지 못할 하루를 보내세요.</p>
+        </div>
+        <div class="sub-title4">
+            <div class="se-sub">
+                <h1>자만벽화마을</h1>
+            </div>
+        </div>
+        <div class="c3-img">
+            <img src="images/벽화마을.jpg" alt="">
+        </div>
+    </div>
+
+    <footer>
+        <div class="copyright">
+            <h2>ⓒ2024 Copyright by yoondoyeon</h2>
+        </div>
+    </footer>
 </body>
 </html>
